refactor: clean and reorganize constants in `UserDAOIni`, standardize method names, and improve file path handling
- UserDAOIniTest: change File to Path operations
- project.properties: update `config.path.charfiles` property to remove relative path usage, improve consistency